# definicli

./: .replit  __init__.py  _main.py  main.py  pyproject.toml  requirements.txt
definicli/: __init__.py  app.py
definicli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
definicli/api/: __init__.py  errors.py
definicli/config/: __init__.py  cmd_line.py
definicli/gui/errors/: __init__.py
definicli/gui/frames/: __init__.py
definicli/logger/: __init__.py
definicli/tools/: __init__.py  args_parse.py  prompts.py
tools/: args_parse.py
