[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "definicli"
version = "0.1.0"
[tool.poetry.dependencies]
PySimpleGUI = "^4.38.0"
bpython = "^0.21"
python = "^3.8"
prompt-toolkit = "^3.0.18"
inspy_logger = "2.1a10"
[tool.poetry.dev-dependencies]
